Menu stopgap measures
Hides overflow content from the nav-menu. No more ghostly nav items floating around beneath the nav.

Relocates the language picker to its own `ul` outside the nav `ul` (an easy way to ensure it has the same appearance and behavior). This `ul` is not allowed to resize or wrap. Thus the items in the real nav `ul` will be squeezed out of their row while the language picker remains stoically in place.

--- a/service_info/static/less/base/header/nav.less
+++ b/service_info/static/less/base/header/nav.less
@@ -4,6 +4,8 @@
 @mobile-menu-height: 64px;
 
 #cms-nav {
+  overflow: hidden;
+
   padding-left: 2rem;
 
   @media (max-width: 992px) {
@@ -67,6 +69,10 @@
       height: @mobile-menu-height;
       line-height: @mobile-menu-height;
     }
+  }
+
+  #language-picker-trigger {
+    .flex(0, 0, auto);
   }
 
   .amber {
